syntax = "proto3";

package account.pb;

message Account {
    bytes   id = 1;
    string  name = 2;
    string  avatar = 3;
    bool    autoAddContact = 4;
    bool    autoJoinGroup = 5;
    bool    autoDepositMessage = 6; // 自动发送寄存消息
    bytes   depositAddress = 7; // 设置消息寄存地址(peerID)
  }
  
message AccountPeer {
    bytes   id = 1;
    string  name = 2;
    string  avatar = 3;
}
  
message AccountOnline {
    bool isOnline = 1;
}